feat: implement frontend
